支持删除断开链接的设备，支持设备自动选择是否自动部署
