# lib/db/api.js
@@ -160,6 +160,7 @@ dbapi.saveDeviceInitialState = function(serial, device) {
       if (stats.skipped) {
         data.serial = serial
         data.createdAt = r.now()
+        data.supportAutomation = 1
         return db.run(r.table('devices').insert(data))
       }
       return stats
@@ -308,6 +309,16 @@ dbapi.setDeviceReady = function(serial, channel) {
   , owner: null
   , reverseForwards: []
   }))
+}
+
+dbapi.setDeviceSupportAutomation = function(serial, supportAutomation) {
+  return db.run(r.table('devices').get(serial).update({
+    supportAutomation: supportAutomation
+  }))
+}
+
+dbapi.deleteDevice = function(serial){
+  return db.run(r.table("devices").get(serial).delete())
 }
 
 dbapi.saveDeviceIdentity = function(serial, identity) {
