# lib/units/api/controllers/devices.js
@@ -10,6 +10,8 @@ var log = logger.createLogger('api:controllers:devices')
 module.exports = {
   getDevices: getDevices
 , getDeviceBySerial: getDeviceBySerial
+, deleteDevice : deleteDevice
+, setDeviceSupportAutomation: setDeviceSupportAutomation
 }
 
 function getDevices(req, res) {
@@ -72,6 +74,63 @@ function getDeviceBySerial(req, res) {
     })
     .catch(function(err) {
       log.error('Failed to load device "%s": ', req.params.serial, err.stack)
+      res.status(500).json({
+        success: false
+      })
+    })
+}
+
+
+function deleteDevice(req, res) {
+  var serial = req.swagger.params.serial.value
+
+  dbapi.loadDevice(serial)
+    .then(function(device) {
+      if (!device) {
+        return res.status(404).json({
+          success: false
+          , description: 'Device not found'
+        })
+      }
+
+      dbapi.deleteDevice(serial)
+        .then(function() {
+          res.json({
+            success: true, status: 'SUCCESS'
+          })
+        })
+    })
+    .catch(function(err) {
+      log.error('Failed to load device "%s": ', req.params.serial, err.stack)
+      res.status(500).json({
+        success: false
+      })
+    })
+}
+
+function setDeviceSupportAutomation(req, res) {
+  var serial = req.body.serial
+  var supportAutomation = req.body.supportAutomation
+
+  log.info("参数serial = " + serial)
+  log.info("参数supportAutomation = " + supportAutomation)
+
+  dbapi.loadDevice(serial)
+    .then(function (device) {
+      if (!device) {
+        return res.status(404).json({
+          success: false
+          , description: 'Device not found'
+        })
+      }
+
+      dbapi.setDeviceSupportAutomation(serial, supportAutomation)
+        .then(function () {
+          return res.json({success: true, status: 'SUCCESS'})
+        })
+    })
+    .catch(function (err) {
+      log.error('Failed to load user by "%s": ', email, err.stack)
       res.status(500).json({
         success: false
       })
